--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,8 +13,9 @@
  
  
 </html>
-=======
+
 "This is the Landing Page of uWater" 
 JOSHUA GERANSKY IS THE BEST
->>>>>>> 606cc7efea9da9c4cd1f81f971a9bdf00011c274
+<br>
 Debby Chiu
+Edits
