--- a/index.html
+++ b/index.html
@@ -1,23 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-  <title>uQuiz</title>
-    <meta charset="utf-8"/>
-  </head>
-  
-<body>
-
- 
- 
-</body>
- 
- 
-</html>
-
 "This is the Landing Page of uWater" 
-JOSHUA GERANSKY IS THE BEST
+<br>
+JOSHUA GERANSKY
 <br>
 Debby Chiu
-Edits
 <br>
 Cameron Wark
