--- a/uQuiz.html
+++ b/uQuiz.html
@@ -9,7 +9,7 @@
 <h1>Is the water clean?</h1>
  <form>
  <input type="radio" name="yes" value="yes" checked> Yes<br>
- <input type="radio" name="no" value="no" checked> No<br>
+ <input type="radio" name="no" value="no"> No<br>
  </form>
 </body>
  
