--- a/uQuiz/uQuiz.html
+++ b/uQuiz/uQuiz.html
@@ -4,7 +4,7 @@
   <title>uQuiz</title>
     <meta charset="utf-8"/>
   </head>
-    <link rel="stylesheet" type="text/css" href="foundation.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/foundation.css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style>
 	body {
