added style link

--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>uWater</title>
+        <link rel="stylesheet" type="text/css" href="../css/foundation.css"/>
         <style>
         </style>
     </head>
