--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -43,7 +43,9 @@
                 <button>Random</button>
             </div>
         </form>
-        <div id="uquiz">uQuiz</div>
-        <footer id="copyright">Copyrighted Team 21 2019</footer>
+        <div id="uquiz">
+            <a href="github/uWater/uQuiz/uQuiz.html">uQuiz</a>
+        </div>
+        <footer id="copyright">ⒸCopyrighted - Team 21 - 2019</footer>
     </body>
 </html>
