added globe image to uQuiz

--- a/uQuiz/uQuiz.html
+++ b/uQuiz/uQuiz.html
@@ -4,7 +4,7 @@
   <title>uQuiz</title>
     <meta charset="utf-8"/>
   </head>
-    <link rel="stylesheet" type="text/css" href="foundation.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/foundation.css"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style>
 	body {
@@ -39,6 +39,9 @@
 	width: 100%;
 	font-size: 0.8em;
 	}
+	image {
+	margin-left: 50px;
+	}
   
   </style>
 <body>
@@ -50,6 +53,9 @@
 </div>
 <p>uQuiz</p>
 <br><br><br>
+<section>
+	<img src="../images/globe.png"></img>
+</section>
 <div id ="prompt">
 <h1> What is this country?</h1>
 <h1>Is the water clean?</h1>
