--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -27,7 +27,11 @@
                 margin-right: auto;
             }
             #copyright {
-                text-align: center;
+               
+				text-align: center;
+				bottom: 0;
+				width: 100%;
+				font-size: 0.8em;
             }
         </style>
     </head>
@@ -44,7 +48,7 @@
             </div>
         </form>
         <div id="uquiz">
-            <a href="github/uWater/uQuiz/uQuiz.html">uQuiz</a>
+            <a href="../uQuiz/uQuiz.html">uQuiz</a>
         </div>
         <footer id="copyright">ⒸCopyrighted - Team 21 - 2019</footer>
     </body>
