added leader board, links to uboard.html

--- a/uQuiz/uQuiz.html
+++ b/uQuiz/uQuiz.html
@@ -41,6 +41,18 @@
 	section {
 		text-align: center;
 	}
+	.button {
+		 background-color: #33518e;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+	}
   
   </style>
 <body>
@@ -69,6 +81,12 @@
  <input type="radio" name="yes" value="yes"> Yes<br>
  <input type="radio" name="no" value="no"> No<br>
  </form>
+ </div>
+ <div id="leader">
+ 
+ <a class="button" href="../uBoard/uBoard.html">
+<button type="button" class ="button">Leader Board</button>
+</a>
  </div>
  <footer>
  Copyrighted Team 21 2019
