--- a/uQuiz/uQuiz.html
+++ b/uQuiz/uQuiz.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style>
 	body {
-	font-family: 'Open Sans', sans-serif;
+	 font-family: 'Montserrat';
+	background-color: #ebeef4;
 	}
     #header {
 	font-weight: bold;
@@ -56,13 +57,14 @@
   
   </style>
 <body>
-<div id="header">
-<a href="../uSearch/uSearch.html">uWater</a>
+<div id="logo">
+    <a href="../uSearch/uSearch.html"><img src="../images/origLogo.png" alt="uWater"></a>
+</div>
 <div id="anchor">
 <a href="../uSearch/uSearch.html"> uSearch</a>
 <a href="uQuiz.html">uQuiz</a>
 </div>
-</div>
+
 <p>uQuiz</p>
 <br><br><br>
 <section>
@@ -89,7 +91,7 @@
 </a>
  </div>
  <footer>
- Copyrighted Team 21 2019
+ © Copyrighted Team 21 2019
  </footer>
 </body>
  
