--- a/uQuiz/uQuiz.html
+++ b/uQuiz/uQuiz.html
@@ -98,7 +98,7 @@
  </div>
 <br><br><br><br><br><br>
 <section>
-	<img src="../images/globe.png"></img>
+    <img src="../images/globe.png" alt="The earth is actually flat! Don't believe the media!">
 
 </section>
 <div id ="prompt">
