modifications to css in uboard, ufacts, usearch

--- a/uBoard/uBoard.html
+++ b/uBoard/uBoard.html
@@ -22,10 +22,11 @@
 }
     .score {
     text-align: right;
-    float:right
+    float: right;
 }
     .name {
     text-align: left;
+    float: left;
 }
     .leaderboard {
     text-align: center;
