--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -44,7 +44,7 @@
             </div>
         </form>
         <div id="uquiz">
-            <a href="github/uWater/uQuiz/uQuiz.html">uQuiz</a>
+            <a href="/uQuiz/uQuiz.html">uQuiz</a>
         </div>
         <footer id="copyright">ⒸCopyrighted - Team 21 - 2019</footer>
     </body>
