--- a/uBoard/uBoard.html
+++ b/uBoard/uBoard.html
@@ -27,11 +27,15 @@
     .name {
     text-align: left;
     float: left;
+    
 }
+
+        
     .leaderboard {
     text-align: center;
     margin: 0 auto;
     width: 50%;
+    clear: both;
 }
     </style>
 
@@ -62,7 +66,7 @@
 <div id="container">
 
   <div class="row">
-    <span class="name"><u>Player</u></span> <span class="score"><u>Score</u></span>
+    <span class="name"><u id="playerColumnTitle">Player</u></span> <span class="score"><u>Score</u></span>
   </div>
 
   <div class="row">
