--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -15,6 +15,9 @@
          clear: both;
          text-align: center;
          }
+         #bananas {
+         color: magenta;
+         }
          #subr {
          text-align: center;
          }
@@ -68,7 +71,7 @@
             <h1 id="uSearchTitle">uSearch</h1>
             <br>
          </div>
-         <div id="safe">"Is your water safe?"</div>
+         <div id="safe">"Is yo<span id="bananas">u</span>r <span id="bananas">water</span> safe?"</div>
          <br>
          <form>
             <div id="country">
