added button leading back to uQuiz on uBoard

--- a/uBoard/uBoard.html
+++ b/uBoard/uBoard.html
@@ -37,6 +37,20 @@
     width: 50%;
     clear: both;
 }
+
+.button {
+		 background-color: #33518e;
+  border: none;
+  color: white;
+  padding: 15px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px 1px;
+  cursor: pointer;
+  float: left;
+	}
     </style>
 
     </head>
@@ -89,8 +103,10 @@
     <span class="name">Player5</span> <span class="score">Score</span>
   </div>
 </div>
-
-
+<br><br><br>
+<a class="button" href="../uQuiz/uQuiz.html">
+<button type="button" class ="button">Back to uQuiz</button>
+</a>
 </body>
 
 </html>
