foundational CSS improvements, including a background img and header styling

--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -7,6 +7,7 @@
       <style>
          #safe {
          text-align: center;
+         color: white;
          }
          #country {
          text-align: center;
@@ -14,6 +15,7 @@
          #uSearchTitle {
          clear: both;
          text-align: center;
+         color: white;
          }
          #bananas {
          color: magenta;
@@ -26,7 +28,7 @@
          line-height: 90px;
          width: 170px;
          height: 90px;
-         background-color: grey;
+         background-color: white;
          font-size: 130%;
          font-weight: bold;
          margin-left: auto;
@@ -56,7 +58,7 @@
       <header>
          <div class="div-header">
             <span id="logo">
-            <a href="../uSearch/uSearch.html"><img src="../images/origLogo.png" alt="uWater"></a>
+            <a href="../uSearch/uSearch.html"><img src="../images/whiteLogo.png" alt="uWater"></a>
             </span>
             <nav id="menu">
                <ul>
