disabled absolute position on footer and removed bg image from uQuiz

--- a/uQuiz/uQuiz.html
+++ b/uQuiz/uQuiz.html
@@ -10,6 +10,7 @@
 	body {
 	 font-family: 'Montserrat';
 	background-color: #ebeef4;
+	background-image: none;
 	}
     #header {
 	font-weight: bold;
@@ -151,7 +152,7 @@ console.log("random is: " + rand);
  </div>
  
  <footer>
- © 2019 Team 21
+ © Copyrighted Team 21 2019
  </footer>
 </body>
  
