--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -77,7 +77,12 @@
          <br>
          <form>
             <div id="country">
-               <input class="form" id="country" type="text" placeholder="Country" minlength="0"
+               <input class="form" id="country" type="text" 
+                      
+                      onfocus="this.placeholder = ''"
+                      onblur="this.placeholder = 'Enter Country'"
+                      
+                      minlength="0"
                   maxlength="40" pattern="[A-Za-z]{0,40}">
             </div>
             <br>
