--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -59,7 +59,11 @@
          border-radius: 12px;
          padding: 8px 20px;
         background-color: white;
+             transition: 0.3s;
          }
+          .buttons:hover{
+              background-color: #4286f4;
+          }
           #uquiz {
          text-align: center;
          line-height: 90px;
@@ -71,7 +75,11 @@
          margin-left: auto;
          margin-right: auto;     
         border-radius: 12px;
+              transition: 0.3s;
          }
+          #uquiz:hover{
+              background-color: #4286f4;
+          }
          a:visited{
          color: none;
          }
