--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -120,6 +120,7 @@
                       
                       onfocus="this.placeholder = ''"
                       placeholder="Enter Country"
+                      onblur="this.placeholder = 'Enter Country'"
                       
                       minlength="0"
                   maxlength="40" pattern="[A-Za-z]{0,40}">
