--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -63,6 +63,7 @@
          }
           .buttons:hover{
               background-color: #4286f4;
+              cursor: pointer;
           }
           #uquiz {
          text-align: center;
@@ -79,6 +80,7 @@
          }
           #uquiz:hover{
               background-color: #4286f4;
+              cursor: pointer;
           }
          a:visited{
          color: none;
