--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -13,6 +13,7 @@
               color: white;
           }
          #safe {
+		 font-size: 2em;
          text-align: center;
          color: white;
          }
@@ -35,16 +36,17 @@
          color: black;
          }
          #bananas {
-         color: magenta;
+	
+         color: #9ce6fc;
          }
          #subr {
          text-align: center;
          }
          #uquiz {
          text-align: center;
-         line-height: 90px;
-         width: 170px;
-         height: 90px;
+        
+         width: 100px;
+         height: 50px;
          background-color: white;
          font-size: 130%;
          font-weight: bold;
