added visitor counter

--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -99,6 +99,13 @@
          a:visited{
          color: none;
          }
+		 #visitors {
+		 font-size: 2em;
+		 
+		 }
+		 #tally {
+		 font-size: 2em;
+		 }
       </style>
    </head>
    <body>
@@ -146,9 +153,16 @@
          <br><br><br>
          <div style="text-align: center">
             <button id="uquiz" onclick="window.location.href = '../uQuiz/uQuiz.html';">uQuiz</button>
-              </div></section>
+             <br><br><br> <p id="visitors"> 
+		Total number of visitors:<div id="tally">50(in a div)</div>
+		</p>	 
+		   
+			  </div></section>
          <br><br><br>
-           </div></article>
+           </div>
+		   </article>
+		 
+		   
       <footer>
          <span>© 2019 Team 21</span>
       </footer>
