--- a/uSearch/uSearch.html
+++ b/uSearch/uSearch.html
@@ -153,9 +153,11 @@
          <br><br><br>
          <div style="text-align: center">
             <button id="uquiz" onclick="window.location.href = '../uQuiz/uQuiz.html';">uQuiz</button>
-             <br><br><br> <p id="visitors"> 
+             <br><br><br> 
+             
+             <div><span id="visitors"> 
 		Total number of visitors:<div id="tally">50(in a div)</div>
-		</p>	 
+                </span>	 </div>
 		   
 			  </div></section>
          <br><br><br>
