--- a/uFacts/uFactsTEST.html
+++ b/uFacts/uFactsTEST.html
@@ -181,7 +181,7 @@
     </script>
     <script>
         function yesFunction() {
-            var dbRef3 = firebase.database().ref().child("tally");
+            var dbRef3 = firebase.database().ref().child("tallyPath").child("tally");
             console.log(dbRef3);
         }
     </script>
