--- a/uBoard/uBoard.html
+++ b/uBoard/uBoard.html
@@ -93,7 +93,7 @@
                             
             <nav id="menu">
                 <ul>
-                    <li><a href="../uSearch/uSearch.html">uSearch</a></li>
+                    <li><a href="../index.html">uSearch</a></li>
                     <li><a href="../uQuiz/uQuiz.html">uQuiz</a></li>
                 </ul>
             </nav>
