--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 	<!-- [data-animate-header] - this is the actual element that will be fixed/animated -->
 	<menu class='header-bar' data-animate-header>
-        <a href='../uSearch/index.html' class='btn-search' data-toggle-class='search-active'>uSearch</a>
+        <a href='../index.html' class='btn-search' data-toggle-class='search-active'>uSearch</a>
 		<a href='#uWater' class='btn-menu' data-toggle-class='menu-active'>uWater</a>
         <a href='../uQuiz/uQuiz.html' class='btn-search' data-toggle-class='search-active'>uQuiz</a>
 
