--- a/uFacts/uFactsTEST.html
+++ b/uFacts/uFactsTEST.html
@@ -187,10 +187,8 @@
     <script>
         function yesFunction() {
                     var dbRef3 = firebase.database().ref().child("tallyPath").child("tally");
-                    dbRef3.on ('value', function (snap) {
-                                var userNum = (snap.val);
-                                console.log(userNum);
-                            });
+                    dbRef3++;
+            console.log(dbRef3);
         }
     </script>
 
