--- a/uQuiz/uQuiz.html
+++ b/uQuiz/uQuiz.html
@@ -154,7 +154,7 @@
 
 	<!-- [data-animate-header] - this is the actual element that will be fixed/animated -->
 	<menu class='header-bar' data-animate-header>
-        <a href='../uSearch/uSearch.html' class='btn-search' data-toggle-class='search-active'>uSearch</a>
+        <a href='../index.html' class='btn-search' data-toggle-class='search-active'>uSearch</a>
 		<a href='#uWater' class='btn-menu' data-toggle-class='menu-active'>uWater</a>
         <a href='../uQuiz/uQuiz.html' class='btn-search' data-toggle-class='search-active'>uQuiz</a>
 
