make uquiz black

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
          #uquiz {
          text-align: center;
-        color: #9ce6fc;
+        color: black;
          width: 100px;
          height: 50px;
          background-color: white;
