--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
 
 
         <script>
-            var input = document.getElementById("submit");
+            var input = document.getElementById("country");
             input.addEventListener("keyup", function(event) {
                 if (event.keyCode === 13) {
                     event.preventDefault();
-                    document.getElementById("submit").click();
+                    document.getElementById("submitButton").click();
                 }  
             });
        </script>
