--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
 
         <script>
-            var input = document.getElementById("country");
+            var input = document.getElementById("submitButton");
             input.addEventListener("keyup", function(event) {
                 if (event.keyCode === 13) {
                     event.preventDefault();
