--- a/uQuiz/uQuiz.html
+++ b/uQuiz/uQuiz.html
@@ -233,7 +233,7 @@ font-size: 3em;
 
 </section>
 -->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script type="text/javascript">
  var rand = Math.floor(Math.random() * 5 + 1);
  $(document).ready(function() {
@@ -392,7 +392,7 @@ for (var i = 0; i < radioButtons.length; i++) {
  </footer>
 </body>
  
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js'></script>
     <script src="../js/index.js"></script>
 
