--- a/uQuiz/uQuiz.html
+++ b/uQuiz/uQuiz.html
@@ -204,7 +204,6 @@ font-size: 3em;
     <header class='header' data-animate-header-container>
 
 
-	<!-- [data-animate-header] - this is the actual element that will be fixed/animated -->
 	<menu class='header-bar' data-animate-header>
         <a href='../index.html' class='btn-search' data-toggle-class='search-active'>uSearch</a>
 		<a href='../index.html' class='btn-menu' data-toggle-class='menu-active'>uWater</a>
@@ -223,16 +222,8 @@ font-size: 3em;
 
  </div>
  
-  <div class="globe">
-<div></div>
-</div>
+<div class="globe"></div>
 
-<!--
-<section>
-    <img src="../images/globe.png" id="globe" alt="The earth is actually flat! Don't believe the media!">
-
-</section>
--->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script type="text/javascript">
  var rand = Math.floor(Math.random() * 5 + 1);
@@ -275,30 +266,6 @@ $('#background').css("object-fit", "cover");
  generateBackground();
  
 	
-
-
-
-	
-	/**
-		if(rand == 1) {
-			if(confirm("Argentina is the correct country")){
-			console.log("ID1 is the correct answer");
-			}
-		}
-		else if(rand == 2) {
-			if(confirm("Belgium is the correct country")){
-			console.log("ID2 is the correct answer");
-			}
-		}
-		*/	
-});
-
-//argentina: yes
-//belgium: yes
-//canada: yes
-//denmark: yes
-//egypt: no
-	
 function checkAnswer() {
 		var x = document.getElementById("f").elements[0].value;
 		var radio = document.getElementById("fo");
@@ -317,31 +284,9 @@ for (var i = 0; i < radioButtons.length; i++) {
 			
 			}
 			document.location.reload(true);
-        //console.log("radioButton " + i + ": " + radioButtons[i].value);
+        }
     }
-}
-		/**
-		alert(yes);
-		if(rand == 1 || rand == 2 || rand == 3 || rand == 4) {  //all clean water
-			if(x == rand && yes == true) {
-				alert("Correct country and it has clean water!!!");
-			}
-			else {
-			alert("Sorry, your answer is wrong.");
-			
-			}
-			document.location.reload(true);
-		} else { //unclean water
-			if(x == rand && yes == false) {
-				alert("Correct, you guessed the correct country and it has unsafe water.");
-			}
-			else {
-			alert("Sorry, your answer is wrong.");
-			
-			}
-			*/
-			//document.location.reload(true);
-		}
+    }
 }
  
  function yesCheck() {
