--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
                             <input type="text" placeholder="Search..." id="input" onkeyup="filterFunction()">
                             <a href="javascript:void(0);" onclick="getValue('Canada')">Canada</a>
                             <a href="javascript:void(0);" onclick="getValue('Egypt')">Egypt</a>
+                            <a href="javascript:void(0);" onclick="getValue('Argentina')">Argentina</a>
                         </div>
                 </div><br>
             </form> 
