fixed dropdown search

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
            /* Search through countries in the drop down. */
            function filterFunction() {
                 var input, filter, ul, li, a, i;
-                input = document.getElementById("myInput");
+                input = document.getElementById("input");
                 filter = input.value.toUpperCase();
                 div = document.getElementById("theDropdown");
                 a = div.getElementsByTagName("a");
